# ibank

./: ARCIUM_DEVNET_DEPLOYMENT_GUIDE.md  ARCIUM_DEVNET_ISSUE.md  ARGUMENT_MAPPING_FIX.md  Anchor.toml  COMPARISON_ANALYSIS.md  CURRENT_STATUS.md  Cargo.toml  DEFINITIVE_COMPARISON.md  DEVNET_DEPLOYMENT.md  DEVNET_DEPLOYMENT_SUCCESS.md  DEVNET_MPC_TESTING.md  FINAL_ANALYSIS.md  README.md  SYSTEMATIC_FIX.md  THE_FIX.md  build.sh  deploy_arcium_devnet.sh  deploy_arcium_official.sh  deploy_devnet.sh  package.json  rename_to_ibank.sh  test.sh
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: banking_circuits.rs  lib.rs  lib_blackjack_backup.rs
programs/blackjack/: Cargo.toml
programs/blackjack/src/: banking_types.rs  lib.rs  lib_blackjack_backup.rs  lib_old_mixed.rs
programs/ibank/: Cargo.toml
programs/ibank/src/: lib.rs
tests/: banking_demo.ts  blackjack.ts.backup
